--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -2,6 +2,7 @@ $primary-color: #D5045C;
 $black-ligth: #262626;
 $grey-medium: #929292;
 $grey-border: #D9D9D9;
+$grey-medium2: #C2C2C2;
 $grey-light: #F0F0F0;
 $shadow-color: rgba(0, 0, 0, 0.2);;
 
