--- a/templates/core/loginform.mustache
+++ b/templates/core/loginform.mustache
@@ -129,18 +129,26 @@
                                             {{#str}} usernameemail {{/str}}
                                         {{/canloginbyemail}}
                                     </label>
-                                    <input type="text" name="username" id="username"
-                                           class="form-control"
-                                           value="{{username}}"
-                                           placeholder={{#quote}}{{^canloginbyemail}}{{#str}}username{{/str}}{{/canloginbyemail}}{{#canloginbyemail}}{{#str}}usernameemail{{/str}}{{/canloginbyemail}}{{/quote}}
-                                           autocomplete="username">
+                                    <div class="input-icon">
+                                        <i class="icon fa fa-at" aria-hidden="true"></i>
+                                        <input type="text" name="username" id="username"
+                                               class="form-control"
+                                               value="{{username}}"
+                                               placeholder={{#quote}}{{^canloginbyemail}}{{#str}}username{{/str}}{{/canloginbyemail}}{{#canloginbyemail}}{{#str}}usernameemail{{/str}}{{/canloginbyemail}}{{/quote}}
+                                               autocomplete="username">
+                                    </div>
+
                                 </div>
                                 <div class="form-group">
                                     <label for="password" class="sr-only">{{#str}} password {{/str}}</label>
-                                    <input type="password" name="password" id="password" value=""
-                                           class="form-control"
-                                           placeholder={{#quote}}{{#str}}password{{/str}}{{/quote}}
-                                           autocomplete="current-password">
+                                    <div class="input-icon">
+                                        <i class="icon fa fa-lock" aria-hidden="true"></i>
+                                        <input type="password" name="password" id="password" value=""
+                                               class="form-control"
+                                               placeholder={{#quote}}{{#str}}password{{/str}}{{/quote}}
+                                               autocomplete="current-password">
+                                    </div>
+
                                 </div>
                                 {{#rememberusername}}
                                     <div class="rememberpass mt-3">
@@ -158,13 +166,13 @@
                                 <p class="font-size-sm"><a href="{{forgotpasswordurl}}">{{#str}}forgotten{{/str}}</a></p>
                             </div>
 
-                            <div class="mt-3">
+                            <div class="mt-3 font-size-sm">
                                 {{#str}} cookiesenabled {{/str}}
                                 {{{cookieshelpiconformatted}}}
                             </div>
                             {{#canloginasguest}}
                                 <div class="mt-2">
-                                    <p>{{#str}}someallowguest{{/str}}</p>
+                                    <p class="font-size-sm">{{#str}}someallowguest{{/str}}</p>
                                     <form action="{{loginurl}}" method="post" id="guestlogin">
                                         <input type="hidden" name="logintoken" value="{{logintoken}}">
                                         <input type="hidden" name="username" value="guest" />
