--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -1,12 +1,5 @@
 body[data-theme='cbe'] {
 
-
-
-  div#nav-drawer {
-    background-color: white;
-    border-right: 1px solid $black-ligth;
-  }
-
   [data-region="drawer"] {
     top: $nav-height;
   }
@@ -21,6 +14,8 @@ body[data-theme='cbe'] {
       justify-content: center;
       align-items: center;
       height: $nav-height;
+      margin: 0 20px;
+      z-index: 1032;
       > img {
         height: 60px;
         width: inherit;
@@ -29,6 +24,9 @@ body[data-theme='cbe'] {
   }
 
   nav.navbar {
+    div[data-region="drawer-toggle"] {
+      z-index: 1032;
+    }
     button.btn.nav-link {
       border-radius: 0;
       height: 30px;
@@ -42,6 +40,94 @@ body[data-theme='cbe'] {
       i.icon {
         font-size: 18px;
       }
+    }
+    &[data-theme='cbe'] {
+      .nav-item {
+        padding-right: 0;
+      }
+      .menu-lang {
+        a.nav-link {
+          &::after {
+            display: inline-block;
+            margin-left: inherit;
+            vertical-align: inherit;
+            content: "";
+            width: 30px;
+            height: 30px;
+            background: url('[[pix:theme|lang]]');
+            color: $black-ligth;
+            position: relative;
+            border: none;
+            top: 2px;
+            margin-right: 19px;
+          }
+        }
+      }
+      .usernav {
+        .nav-item {
+          i.icon {
+            height: 30px;
+            width: 30px;
+            font-size: 30px;
+            color: $black-ligth;
+            margin-right: 20px;
+          }
+          .usermenu {
+            .userbutton {
+              .usertext {
+                display: none;
+              }
+              img.userpicture {
+                height: 50px;
+                width: 50px;
+              }
+            }
+            a.dropdown-toggle {
+              padding: 0;
+              &::after {
+                content: inherit;
+              }
+            }
+          }
+        }
+      }
+    }
+    .popover-region-container {
+      border: 1px solid $grey-border;
+      box-shadow: $shadow-color 0 3px 6px;
+      top: 48px;
+      padding: 15px;
+      i.icon {
+        height: 12px !important;
+        width: 12px !important;
+        font-size: 21px !important;
+        margin-right: 0 !important;
+      }
+    }
+  }
+
+  div#nav-drawer {
+    background-color: white;
+    border-right: 1px solid $black-ligth;
+    top: 0;
+    z-index: 1020;
+    padding-top: 90px;
+    height: 100%;
+    .list-group-item {
+      border: none;
+      color: $black-ligth;
+      &.active {
+        color: $primary-color;
+        background-color: white;
+      }
+    }
+  }
+
+  [data-region=right-hand-drawer].drawer {
+    top: $nav-height;
+    height: calc(100% - 75px);
+    .message-app {
+      background-color: white;
     }
   }
 
