--- a/scss/pages/_login.scss
+++ b/scss/pages/_login.scss
@@ -4,7 +4,7 @@ body[data-theme='cbe'][data-region='login'] {
     background:
             linear-gradient(rgb(255 255 255 / 40%),
             rgb(255 255 255 / 40%)),
-            url('[[pix:theme|login_background|]]');
+            url('[[pix:theme|login_background]]');
     #region-main-box {
       display: flex;
       section#region-main-login {
