--- a/templates/block_myoverview/main.mustache
+++ b/templates/block_myoverview/main.mustache
@@ -15,19 +15,30 @@
     along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 }}
 {{!
-    Page footer.
+    @template block_myoverview/main
+
+    This template renders the main content area for the myoverview block.
+
+    Example context (json):
+    {}
 }}
-<div id="goto-top-link">
-    {{! go to top is sticky to footer so needs to be sibling }}
-    <a class="btn btn-light" role="button" href="#" aria-label="{{#str}} totop, theme_boost {{/str}}">
-        {{#pix}} i/up, core{{/pix}}
-    </a>
-</div>
-<footer id="page-footer" class="py-3 bg-dark text-light">
-    <div class="container">
-        <div class="politics">
-        {{{ output.standard_footer_html }}} <span class="more"> | <a href="">Políticas de privacidad</a></span>
-        </div>
-        {{{ output.standard_end_of_body_html }}}
+
+<div id="block-myoverview-{{uniqid}}" class="block-myoverview block-cards" data-region="myoverview" role="navigation">
+    <div class="container-fluid p-0">
+        {{> block_myoverview/courses-view }}
     </div>
-</footer>
+</div>
+{{#js}}
+require(
+[
+    'jquery',
+    'block_myoverview/main',
+],
+function(
+    $,
+    Main
+) {
+    var root = $('#block-myoverview-{{uniqid}}');
+    Main.init(root);
+});
+{{/js}}
