--- a/templates/columns2_admin.mustache
+++ b/templates/columns2_admin.mustache
@@ -50,55 +50,52 @@
 }}
 {{> theme_boost/head }}
 
-<body {{{ bodyattributes }}} data-theme="cbe" data-role="user">
+<body {{{ bodyattributes }}} data-theme="cbe" data-role="admin">
 {{> core/local/toast/wrapper}}
 
-    <div id="page-wrapper" class="d-print-block">
+<div id="page-wrapper" class="d-print-block">
 
-        {{{ output.standard_top_of_body_html }}}
+    {{{ output.standard_top_of_body_html }}}
 
-        {{> theme_cbe/navbar }}
-        {{> theme_boost/nav-drawer }}
+    {{> theme_cbe/navbar_admin }}
+    {{> theme_boost/nav-drawer }}
 
-        <div id="page" class="container-fluid d-print-block">
-            {{{ output.full_header }}}
+    <div id="page" class="container-fluid d-print-block">
+        {{{ output.full_header }}}
 
-            <div id="page-content" class="row pb-3 d-print-block">
-                <div id="region-main-box" class="col-12">
-                    {{#hasregionmainsettingsmenu}}
-                    <div id="region-main-settings-menu" class="d-print-none {{#hasblocks}}has-blocks{{/hasblocks}}">
-                        <div> {{{ output.region_main_settings_menu }}} </div>
-                    </div>
-                    {{/hasregionmainsettingsmenu}}
-                    <section id="region-main" {{#hasblocks}}class="has-blocks mb-3"{{/hasblocks}} aria-label="{{#str}}content{{/str}}">
-
-                        {{#hasregionmainsettingsmenu}}
-                            <div class="region_main_settings_menu_proxy"></div>
-                        {{/hasregionmainsettingsmenu}}
-                        {{{ output.course_content_header }}}
-                        {{{ output.main_content }}}
-                        {{{ output.activity_navigation }}}
-                        {{{ output.course_content_footer }}}
-
-                    </section>
-                    {{#hasblocks}}
-                    <section data-region="blocks-column" class="d-print-none" aria-label="{{#str}}blocks{{/str}}">
-                        {{{ sidepreblocks }}}
-                    </section>
-                    {{/hasblocks}}
+        <div id="page-content" class="row pb-3 d-print-block">
+            <div id="region-main-box" class="col-12">
+                {{#hasregionmainsettingsmenu}}
+                <div id="region-main-settings-menu" class="d-print-none {{#hasblocks}}has-blocks{{/hasblocks}}">
+                    <div> {{{ output.region_main_settings_menu }}} </div>
                 </div>
+                {{/hasregionmainsettingsmenu}}
+                <section id="region-main" {{#hasblocks}}class="has-blocks mb-3"{{/hasblocks}} aria-label="{{#str}}content{{/str}}">
+
+                    {{#hasregionmainsettingsmenu}}
+                        <div class="region_main_settings_menu_proxy"></div>
+                    {{/hasregionmainsettingsmenu}}
+                    {{{ output.course_content_header }}}
+                    {{{ output.main_content }}}
+                    {{{ output.activity_navigation }}}
+                    {{{ output.course_content_footer }}}
+
+                </section>
+                {{#hasblocks}}
+                <section data-region="blocks-column" class="d-print-none" aria-label="{{#str}}blocks{{/str}}">
+                    {{{ sidepreblocks }}}
+                </section>
+                {{/hasblocks}}
             </div>
         </div>
-        {{{ output.standard_after_main_region_html }}}
-        {{> theme_cbe/footer }}
     </div>
+    {{{ output.standard_after_main_region_html }}}
+    {{> theme_cbe/footer }}
+</div>
 
 </body>
 </html>
 {{#js}}
-
-    console.log('hola');
-
 M.util.js_pending('theme_boost/loader');
 require(['theme_boost/loader'], function() {
     M.util.js_complete('theme_boost/loader');
