--- a/templates/navbar_admin.mustache
+++ b/templates/navbar_admin.mustache
@@ -37,7 +37,7 @@
         "sitename": "Moodle Site"
     }
 }}
-<nav data-theme="cbe" class="fixed-top navbar navbar-light bg-white navbar-expand moodle-has-zindex" aria-label="{{#str}}sitemenubar, admin{{/str}}">
+<nav class="fixed-top navbar navbar-light bg-white navbar-expand moodle-has-zindex" aria-label="{{#str}}sitemenubar, admin{{/str}}">
 
         <div data-region="drawer-toggle" class="d-inline-block mr-3">
             <button aria-expanded="{{#navdraweropen}}true{{/navdraweropen}}{{^navdraweropen}}false{{/navdraweropen}}" aria-controls="nav-drawer" type="button" class="btn nav-link float-sm-left mr-1 btn-light bg-gray" data-action="toggle-drawer" data-side="left" data-preference="drawer-open-nav">{{#pix}}i/menubars{{/pix}}<span class="sr-only">{{#str}}sidepanel, core{{/str}}</span></button>
@@ -53,16 +53,15 @@
             </div>
         </a>
 
-        <div class="ml-auto">
-            {{{ output.search_box }}}
-        </div>
-
-        <ul class="navbar-nav d-none d-md-flex menu-lang">
+        <ul class="navbar-nav d-none d-md-flex">
             <!-- custom_menu -->
             {{{ output.custom_menu }}}
             <!-- page_heading_menu -->
             {{{ output.page_heading_menu }}}
         </ul>
+        <div class="ml-auto">
+            {{{ output.search_box }}}
+        </div>
         <ul class="nav navbar-nav usernav">
             <!-- navbar_plugin_output -->
             <li class="nav-item">
