--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -4,6 +4,8 @@
 @import "base/typography";
 @import "base/form";
 
+@import "components/coursecard";
+
 @import "layout/navbar";
 @import "layout/footer";
 @import "layout/myoverview";
