--- a/scss/layout/_myoverview.scss
+++ b/scss/layout/_myoverview.scss
@@ -18,6 +18,17 @@ body[data-theme='cbe'][data-role='user'] {
                 border: 1px solid $grey-border;
                 box-shadow: $shadow-color 0 3px 6px;
                 border-radius: 0;
+                margin-right: 24px;
+                margin-bottom: 24px;
+                @media (min-width: 1600px) {
+                  width: calc(33% - 1.8rem);
+                }
+                @media (max-width: 1600px) {
+                  width: calc(50% - 1.8rem);
+                }
+                @media (max-width: 768px) {
+                  width: calc(100% - 1.8rem);
+                }
                 .card-img.dashboard-card-img {
                   height: 150px;
                   min-height: 150px;
