--- a/templates/block_myoverview/main.mustache
+++ b/templates/block_myoverview/main.mustache
@@ -25,7 +25,7 @@
 
 <div id="block-myoverview-{{uniqid}}" class="block-myoverview block-cards" data-region="myoverview" role="navigation">
     <div class="container-fluid p-0">
-        {{> block_myoverview/courses-view }}
+        {{> theme_cbe/courses-view }}
     </div>
 </div>
 {{#js}}
