--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -33,4 +33,8 @@ body[data-theme='cbe'][data-role='user'] {
     border-radius: 0;
   }
 
+  [data-region="blocks-column"] {
+    margin-top: 32px;
+  }
+
 }
