--- a/templates/navbar.mustache
+++ b/templates/navbar.mustache
@@ -63,6 +63,103 @@
             <!-- page_heading_menu -->
             {{{ output.page_heading_menu }}}
         </ul>
+
+        <div id="menu-apps">
+            <div id="menu-apps-btn">
+                <button type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <svg id="Menú_Apps" data-name="Menú Apps" xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26">
+                        <rect id="Rectángulo_2" data-name="Rectángulo 2" width="6" height="6" fill="#262626"/>
+                        <rect id="Rectángulo_1447" data-name="Rectángulo 1447" width="6" height="6" transform="translate(0 10)" fill="#262626"/>
+                        <rect id="Rectángulo_1450" data-name="Rectángulo 1450" width="6" height="6" transform="translate(0 20)" fill="#262626"/>
+                        <rect id="Rectángulo_1440" data-name="Rectángulo 1440" width="6" height="6" transform="translate(10)" fill="#262626"/>
+                        <rect id="Rectángulo_1446" data-name="Rectángulo 1446" width="6" height="6" transform="translate(10 10)" fill="#262626"/>
+                        <rect id="Rectángulo_1449" data-name="Rectángulo 1449" width="6" height="6" transform="translate(10 20)" fill="#262626"/>
+                        <rect id="Rectángulo_1441" data-name="Rectángulo 1441" width="6" height="6" transform="translate(20)" fill="#262626"/>
+                        <rect id="Rectángulo_1445" data-name="Rectángulo 1445" width="6" height="6" transform="translate(20 10)" fill="#262626"/>
+                        <rect id="Rectángulo_1448" data-name="Rectángulo 1448" width="6" height="6" transform="translate(20 20)" fill="#262626"/>
+                    </svg>
+                </button>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton" >
+                    <ul class="apps">
+                        <li class="app">
+                            <div class="icon email">
+                                <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                            </div>
+                            <div class="text">E-mail</div>
+                        </li>
+                        <li class="app search">
+                            <div class="icon">
+                                <i class="fa fa-search" aria-hidden="true"></i>
+                            </div>
+                            <div class="text">Buscar</div>
+                        </li>
+                        <li class="app maps">
+                            <div class="icon">
+                                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                            </div>
+                            <div class="text">Mapas</div>
+                        </li>
+                        <li class="app videos">
+                            <div class="icon">
+                                <i class="fa fa-film" aria-hidden="true"></i>
+                            </div>
+                            <div class="text">Videos</div>
+                        </li>
+                        <li class="app meets">
+                            <div class="icon">
+                                <i class="fa fa-video-camera" aria-hidden="true"></i>
+                            </div>
+                            <div class="text">Reuniones</div>
+                        </li>
+                        <li class="app files">
+                            <div class="icon">
+                                <i class="fa fa-file-o" aria-hidden="true"></i>
+                            </div>
+                            <div class="text">Archivos</div>
+                        </li>
+                        <li class="app chats">
+                            <div class="icon">
+                                <i class="fa fa-commenting-o" aria-hidden="true"></i>
+                            </div>
+                            <div class="text">Chat</div>
+                        </li>
+                        <li class="app schedule">
+                            <div class="icon">
+                                <i class="fa fa-calendar" aria-hidden="true"></i>
+                            </div>
+                            <div class="text">Calendario</div>
+                        </li>
+                    </ul>
+                    <ul class="mycourses">
+                        <li class="app">
+                            <div class="icon">
+                                <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                            </div>
+                            <div class="text">Catalá</div>
+                        </li>
+                        <li class="app">
+                            <div class="icon">
+                                <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                            </div>
+                            <div class="text">Educació física</div>
+                        </li>
+                        <li class="app">
+                            <div class="icon">
+                                <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                            </div>
+                            <div class="text">Matemàtiques</div>
+                        </li>
+                        <li class="app">
+                            <div class="icon">
+                                <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                            </div>
+                            <div class="text">Medi Natural</div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
         <ul class="nav navbar-nav usernav">
             <!-- navbar_plugin_output -->
             <li class="nav-item">
