--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -192,6 +192,7 @@ body[data-theme='cbe'] {
             }
             ul.mycourses {
               border-top: 1px solid $grey-border;
+              padding-top: 30px;
             }
           }
         }
