--- a/scss/components/_coursecard.scss
+++ b/scss/components/_coursecard.scss
@@ -1,4 +1,26 @@
-body[data-theme='cbe'] {
+body[data-theme='cbe'][data-role="user"]  {
+
+  .dashboard-card {
+    .teachers {
+      position: absolute;
+      top: 118px;
+      right: 12px;
+      display: flex;
+      .teacher {
+        height: 50px;
+        width: 50px;
+        margin: 0 0 0 10px;
+        img.picture-teacher {
+          width: 50px;
+          height: 50px;
+          border-radius: 25px;
+          border: 1px solid white;
+          box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px;
+        }
+      }
+    }
+  }
+
 
   footer.course-footer {
     border-top: 1px solid $grey-border;
