--- a/templates/core_course/coursecard.mustache
+++ b/templates/core_course/coursecard.mustache
@@ -42,6 +42,18 @@
             <span class="sr-only">{{#str}}aria:courseimage, core_course{{/str}}</span>
         </div>
     </a>
+    <div class="teachers">
+        <div class="teacher">
+            <button type="button" class="btn-tooltip" data-toggle="tooltip" data-placement="bottom" title="Juana García Sánchez">
+                <img class="picture-teacher" src="https://randomuser.me/api/portraits/women/75.jpg" alt="">
+            </button>
+        </div>
+        <div class="teacher">
+            <button type="button" class="btn-tooltip" data-toggle="tooltip" data-placement="bottom" title="Monica Reus Lerma">
+                <img class="picture-teacher" src="https://randomuser.me/api/portraits/women/63.jpg" alt="">
+            </button>
+        </div>
+    </div>
     <div class="card-body pr-1 course-info-container" id="course-info-container-{{id}}-{{uniqid}}">
         <div class="d-flex align-items-start">
             <div class="w-100 text-truncate">
@@ -70,14 +82,23 @@
                     </div>
                 {{/visible}}
             </div>
-            {{$menu}}{{/menu}}
         </div>
     </div>
     <footer class="course-footer">
-        <div class="user-role">{{# pix }} role_teacher, theme_cbe, Teacher {{/ pix }}</div>
-        <div class="students"><i class="fa fa-users" aria-hidden="true"></i><span>20</span></div>
-        <div class="user-role"><button class="btn btn-secondary aula">ver aula</button></div>
-
+        <div class="user-role">
+            <button type="button" class="btn-tooltip" data-toggle="tooltip" data-placement="bottom" title="Profesor">
+                {{# pix }} role_teacher, theme_cbe, Teacher {{/ pix }}
+            </button>
+        </div>
+        <div class="students">
+            <button type="button" class="btn-tooltip" data-toggle="tooltip" data-placement="bottom" title="20 estudiantes">
+                <i class="fa fa-users" aria-hidden="true"></i><span>20</span>
+            </button>
+        </div>
+        <div class="user-role">
+            <a href="{{ viewurl }}" class="btn btn-secondary aula">ver aula</a>
+        </div>
     </footer>
     {{$progress}}{{/progress}}
 </div>
+
