--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -46,6 +46,7 @@ body[data-theme='cbe'] {
         padding-right: 10px;
       }
       .menu-lang {
+        z-index: 1050;
         a.nav-link {
           &::after {
             display: inline-block;
@@ -64,6 +65,7 @@ body[data-theme='cbe'] {
         }
       }
       .usernav {
+        z-index: 1050;
         .nav-item {
           i.icon {
             height: 30px;
@@ -133,9 +135,13 @@ body[data-theme='cbe'] {
 
   &[data-role='user'] {
     nav.navbar {
+      .aabtn {
+        z-index: 1050;
+      }
       #menu-apps {
         position: relative;
         top: -2px;
+        z-index: 1050;
         #menu-apps-btn {
           margin-right: 20px;
           cursor: pointer;
@@ -193,6 +199,43 @@ body[data-theme='cbe'] {
             ul.mycourses {
               border-top: 1px solid $grey-border;
               padding-top: 30px;
+            }
+          }
+        }
+      }
+      div#header-course {
+        height: $nav-height;
+        position: absolute;
+        width: 100%;
+        top: 0;
+        left: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        ul.course-menu {
+          display: flex;
+          list-style: none;
+          height: $nav-height;
+          align-items: center;
+          margin: 0;
+          overflow: hidden;
+          li.course-menu-item {
+            margin: 0 0;
+            font-size: 18px;
+            position: relative;
+            padding: 0 20px;
+            &.active {
+              font-family: $fontbold;
+              &::after {
+                content: " ";
+                background-color: $primary-color;
+                width: 100%;
+                height: 12px;
+                left: 0;
+                position: absolute;
+                border-radius: 4px;
+                bottom: -30px;
+              }
             }
           }
         }
