--- a/templates/core_course/coursecard.mustache
+++ b/templates/core_course/coursecard.mustache
@@ -74,7 +74,7 @@
                     <span class="sr-only">
                             {{#str}}aria:coursename, core_course{{/str}}
                         </span>
-                    {{$coursename}}{{/coursename}}
+                    {{$coursename}}{{/coursename}} {{ totalcoursecount }}
                 </a>
                 {{^visible}}
                     <div class="d-flex flex-wrap">
