--- a/templates/navbar.mustache
+++ b/templates/navbar.mustache
@@ -105,94 +105,118 @@
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton" >
                     <ul class="apps">
                         <li class="app">
-                            <div class="icon email">
-                                <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                            </div>
-                            <div class="text">
-                                {{# str }} app_menu_email, theme_cbe {{/ str }}
-                            </div>
+                            <a href="#" class="app-link" target="_blank">
+                                <div class="icon email">
+                                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    {{# str }} app_menu_email, theme_cbe {{/ str }}
+                                </div>
+                            </a>
                         </li>
                         <li class="app search">
-                            <div class="icon">
-                                <i class="fa fa-search" aria-hidden="true"></i>
-                            </div>
-                            <div class="text">
-                                {{# str }} app_menu_search, theme_cbe {{/ str }}
-                            </div>
+                            <a href="#" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-search" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    {{# str }} app_menu_search, theme_cbe {{/ str }}
+                                </div>
+                            </a>
                         </li>
                         <li class="app maps">
-                            <div class="icon">
-                                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                            </div>
-                            <div class="text">
-                                {{# str }} app_menu_maps, theme_cbe {{/ str }}
-                            </div>
+                            <a href="#" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    {{# str }} app_menu_maps, theme_cbe {{/ str }}
+                                </div>
+                            </a>
                         </li>
                         <li class="app videos">
-                            <div class="icon">
-                                <i class="fa fa-film" aria-hidden="true"></i>
-                            </div>
-                            <div class="text">
-                                {{# str }} app_menu_videos, theme_cbe {{/ str }}
-                            </div>
+                            <a href="https://pad.pilotescola.digital" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-film" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    {{# str }} app_menu_videos, theme_cbe {{/ str }}
+                                </div>
+                            </a>
                         </li>
                         <li class="app meets">
-                            <div class="icon">
-                                <i class="fa fa-video-camera" aria-hidden="true"></i>
-                            </div>
-                            <div class="text">
-                                {{# str }} app_menu_meets, theme_cbe {{/ str }}
-                            </div>
+                            <a href="https://jitsi.pilotescola.digital" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-video-camera" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    {{# str }} app_menu_meets, theme_cbe {{/ str }}
+                                </div>
+                            </a>
                         </li>
                         <li class="app files">
-                            <div class="icon">
-                                <i class="fa fa-file-o" aria-hidden="true"></i>
-                            </div>
-                            <div class="text">
-                                {{# str }} app_menu_files, theme_cbe {{/ str }}
-                            </div>
+                            <a href="https://nextcloud.pilotescola.digital" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-file-o" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    {{# str }} app_menu_files, theme_cbe {{/ str }}
+                                </div>
+                            </a>
                         </li>
                         <li class="app chats">
-                            <div class="icon">
-                                <i class="fa fa-commenting-o" aria-hidden="true"></i>
-                            </div>
-                            <div class="text">
-                                {{# str }} app_menu_chat, theme_cbe {{/ str }}
-                            </div>
+                            <a href="#" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-commenting-o" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    {{# str }} app_menu_chat, theme_cbe {{/ str }}
+                                </div>
+                            </a>
                         </li>
                         <li class="app schedule">
-                            <div class="icon">
-                                <i class="fa fa-calendar" aria-hidden="true"></i>
-                            </div>
-                            <div class="text">
-                                {{# str }} app_menu_schedule, theme_cbe {{/ str }}
-                            </div>
+                            <a href="#" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-calendar" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">
+                                    {{# str }} app_menu_schedule, theme_cbe {{/ str }}
+                                </div>
+                            </a>
                         </li>
                     </ul>
-                    <ul class="mycourses">
+                    <ul id="app-my-courses" class="mycourses">
                         <li class="app">
-                            <div class="icon">
-                                <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-                            </div>
-                            <div class="text">Catalá</div>
+                            <a href="#" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">Catalá</div>
+                            </a>
                         </li>
                         <li class="app">
-                            <div class="icon">
-                                <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-                            </div>
-                            <div class="text">Educació física</div>
+                            <a href="#" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">Educació física</div>
+                            </a>
                         </li>
                         <li class="app">
-                            <div class="icon">
-                                <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-                            </div>
-                            <div class="text">Matemàtiques</div>
+                            <a href="#" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">Matemàtiques</div>
+                            </a>
                         </li>
                         <li class="app">
-                            <div class="icon">
-                                <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-                            </div>
-                            <div class="text">Medi Natural</div>
+                            <a href="#" class="app-link" target="_blank">
+                                <div class="icon">
+                                    <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                                </div>
+                                <div class="text">Medi Natural</div>
+                            </a>
                         </li>
                     </ul>
                 </div>
