--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -181,35 +181,39 @@ body[data-theme='cbe'] {
               grid-template-columns: 84px 84px 84px;
               grid-gap: 15px 4px;
               li.app {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: start;
-                text-align: center;
-                .icon {
-                  width: 40px;
-                  height: 40px;
-                  background-color: $primary-color;
-                  border-radius: $border-radius;
-                  margin-right: 0;
+                a.app-link {
                   display: flex;
+                  flex-direction: column;
                   align-items: center;
-                  justify-content: center;
-                  i {
-                    color: white;
-                    font-size: 19px;
-                  }
-                  &:hover {
-                    background-color: $primary-color-light;
-                  }
-                }
-                .text {
+                  justify-content: start;
                   text-align: center;
-                  margin-top: 4px;
-                  height: 29px;
-                  font-size: 14px;
-                  line-height: 18px;
-                  overflow-wrap: anywhere;
+                  color: $black-ligth;
+                  text-decoration: none;
+                  .icon {
+                    width: 40px;
+                    height: 40px;
+                    background-color: $primary-color;
+                    border-radius: $border-radius;
+                    margin-right: 0;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    i {
+                      color: white;
+                      font-size: 19px;
+                    }
+                    &:hover {
+                      background-color: $primary-color-light;
+                    }
+                  }
+                  .text {
+                    text-align: center;
+                    margin-top: 4px;
+                    height: 29px;
+                    font-size: 14px;
+                    line-height: 18px;
+                    overflow-wrap: anywhere;
+                  }
                 }
               }
             }
