--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -28,7 +28,7 @@ body[data-theme='cbe'] {
       z-index: 1032;
     }
     button.btn.nav-link {
-      border-radfius: 0;
+      border-radius: 0;
       height: 30px;
       width: 30px;
       display: flex;
