--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -258,6 +258,13 @@ body[data-theme='cbe'] {
                 bottom: -30px;
               }
             }
+            a.link {
+              text-decoration: none;
+              color: inherit;
+              &:hover {
+                color: $grey-medium;
+              }
+            }
           }
         }
       }
